--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -66,10 +66,10 @@ html(lang='en')
                             li(class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2") Unstarred
                     i(data-feather="rotate-cw" class="w-5 h-5 stroke-title")
                     div.dropdown.border-l.border-border-light.pl-2(class="rtl:border-r rtl:border-l-0 rtl:pr-2 rtl:pl-unset")
-                      +SVG_ICON("More-Square", "w-5 h-5 stroke-title")
+                      +SVG_ICON("More-Square", "w-5 h-5 stroke-title") 
                       div.dropdown-menu(class="!w-fit !top-7 left-0 !p-1")
-                        ul.flex.flex-col.cursor-pointer(class="!gap-1")
-                          li(class="px-2 py-1 rounded hover:bg-gray-light") Mark all as read
+                        ul.flex.flex-col.cursor-pointer(class="!gap-1") 
+                          li(class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2") Mark all as read
                     div.left-sidebar-hide-logo-show(class="hidden lg:block") 
                       i(data-feather="filter" class="hidden w-5 h-5 cursor-pointer stroke-title left-sidebar-toggle-btn lg:block")
                   div.flex.items-center.gap-3(class="sm:gap-1 2sm:flex-row-reverse")
