--- a/assets/pug/pages/template/tabs.pug
+++ b/assets/pug/pages/template/tabs.pug
@@ -712,30 +712,30 @@ html(lang='en')
                               div.overflow-auto.custom-scroll
                                 table.table.equal-space  
                                   thead
-                                    tr
+                                    tr 
                                       th(scope='col' class="dark:text-content3") #
                                       th(scope='col' class="dark:text-content3") Name
                                       th(scope='col' class="dark:text-content3") Country
-                                      th(scope='col' class="dark:text-content3") Rating 
+                                      th(scope='col' class="dark:text-content3 rtl:!text-end") Rating 
                                   tbody
-                                    tr
+                                    tr 
                                       th(scope='row' class="dark:text-white rtl:text-right") 1
                                       td(class="dark:text-white") Mrunali
-                                      td(class="dark:text-white") India  
+                                      td(class="dark:text-white") India
                                       td(class="dark:text-white")
                                         div.flex.items-center.justify-end(class="gap-[2px]")
                                           i.fa-solid.fa-star(class="text-warning") 
                                           i.fa-solid.fa-star(class="text-warning")
                                           i.fa-solid.fa-star(class="text-warning")
-                                          i.fa-solid.fa-star(class="text-warning") 
+                                          i.fa-solid.fa-star(class="text-warning")
                                     tr
                                       th(scope='row' class="dark:text-white rtl:text-right rtl:pt-4") 3
                                       td(class="dark:text-white") Bright 
                                       td(class="dark:text-white") Thailand 
-                                      td  
+                                      td
                                         div.flex.items-center.justify-end(class="gap-[2px]")
                                           i.fa-solid.fa-star(class="text-warning")
-                                          i.fa-solid.fa-star(class="text-warning")  
+                                          i.fa-solid.fa-star(class="text-warning")
                                           i.fa-solid.fa-star(class="text-warning")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
