--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -51,7 +51,7 @@ html(lang='en')
                   option(value='3') Price Hight 
               div.flex.items-center.gap-3 
                 div.search-box.relative(class="2md:hidden")
-                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
+                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title dark:text-white dark:bg-sidebar-dark2 border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
                   +SVG_ICON("Search","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
                 button
                   +SVG_ICON("Search","2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
