--- a/html/template/knowledgebase.html
+++ b/html/template/knowledgebase.html
@@ -474,7 +474,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./alert.html">Alert</a></li>
                               <li><a href="./avatars.html">Avatars</a></li>
@@ -497,7 +497,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./breadcrumb.html">Breadcrumb</a></li>
                               <li><a href="./carousel.html">Carousel</a></li>
@@ -522,7 +522,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./feather.html">Feather</a></li>
                               <li><a href="./fontawesome.html">Font Awesome</a></li>
@@ -1043,7 +1043,7 @@
                   <div class="divider w-full"> </div>
                   <div class="flex justify-between"> <a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by </p><span class="text-primary text-xs">Yen and 242 Others</span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1078,7 +1078,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Wilt and 126 Others  </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1113,7 +1113,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bran and 186 Others  </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
                       </div>
@@ -1148,7 +1148,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Dou and 96 Others  </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1183,7 +1183,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bets and 154 Others </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
                       </div>
@@ -1218,7 +1218,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Robed and 198 Others </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/5.jpg" alt="avatar"></div>
                       </div>
@@ -1253,7 +1253,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Virga and 126 Others </span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/11.jpg" alt="avatar"></div>
                       </div>
@@ -1288,7 +1288,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Brent and 126 Others</span></a>
-                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden rtl:-space-x-6">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/10.jpg" alt="avatar"></div>
                       </div>
@@ -1330,41 +1330,41 @@
             <ul class="flex flex-col gap-7 mode-event">
               <li> 
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
                 </div>
-                <div class="mt-2">
+                <div class="mt-2"> 
                   <ul class="flex items-center gap-3 flex-wrap"> 
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+                      <label class="block overflow-hidden border shadow-md mode-theme-light border-light dark:border-border-dark rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+                      <label class="block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
                     </li>
                   </ul>
                 </div>
               </li>
               <li>
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
                 </div>
                 <div class="mt-2">
-                  <ul class="flex items-center gap-3">
+                  <ul class="flex items-center gap-3"> 
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+                      <label class="block overflow-hidden border shadow-md layout-ltr border-light dark:border-border-dark rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
                     </li>
                     <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+                      <label class="block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
                     </li>
                   </ul>
                 </div>
               </li>
               <li>
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3">
@@ -1381,7 +1381,7 @@
               </li>
               <li>
                 <div class="flex items-center justify-between"> <span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
-                  <label class="inline-flex relative items-center cursor-pointer"> 
+                  <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
                 </div>
@@ -1389,8 +1389,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
-          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
