--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -476,7 +476,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./alert.html">Alert</a></li>
                               <li><a href="./avatars.html">Avatars</a></li>
@@ -499,7 +499,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./breadcrumb.html">Breadcrumb</a></li>
                               <li><a href="./carousel.html">Carousel</a></li>
@@ -524,7 +524,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./feather.html">Feather</a></li>
                               <li><a href="./fontawesome.html">Font Awesome</a></li>
@@ -1616,41 +1616,41 @@
             <ul class="flex flex-col gap-7 mode-event">
               <li> 
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
                 </div>
-                <div class="mt-2">
+                <div class="mt-2"> 
                   <ul class="flex items-center gap-3 flex-wrap"> 
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+                      <label class="block overflow-hidden border shadow-md mode-theme-light border-light dark:border-border-dark rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+                      <label class="block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
                     </li>
                   </ul>
                 </div>
               </li>
               <li>
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
                 </div>
                 <div class="mt-2">
-                  <ul class="flex items-center gap-3">
+                  <ul class="flex items-center gap-3"> 
                     <li class="relative">
                       <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+                      <label class="block overflow-hidden border shadow-md layout-ltr border-light dark:border-border-dark rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
                     </li>
                     <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                      <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+                      <label class="block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
                     </li>
                   </ul>
                 </div>
               </li>
               <li>
                 <div>
-                  <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3">
@@ -1667,7 +1667,7 @@
               </li>
               <li>
                 <div class="flex items-center justify-between"> <span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
-                  <label class="inline-flex relative items-center cursor-pointer"> 
+                  <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
                 </div>
@@ -1675,8 +1675,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
-          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
