--- a/html/template/video-app.html
+++ b/html/template/video-app.html
@@ -478,7 +478,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./alert.html">Alert</a></li>
                               <li><a href="./avatars.html">Avatars</a></li>
@@ -501,7 +501,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./breadcrumb.html">Breadcrumb</a></li>
                               <li><a href="./carousel.html">Carousel</a></li>
@@ -526,7 +526,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-                          <div class="dropdown-menu dropdown-sub-menu">
+                          <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./feather.html">Feather</a></li>
                               <li><a href="./fontawesome.html">Font Awesome</a></li>
@@ -1613,7 +1613,7 @@
             </div>
             <div class="col-span-3 2xl:col-span-4 dark:bg-sidebar-dark">
               <!-- chat right sidebar start-->
-              <div class="border-l border-gray-light tabs flex-col gap-0 right-sidebar-aside rtl:border-l-0 rtl:border-r dark:bg-sidebar-dark dark:border-l dark:border-border-dark">
+              <div class="border-l border-gray-light tabs flex-col gap-0 right-sidebar-aside rtl:border-l-0 rtl:border-r dark:bg-sidebar-dark dark:border-border-dark">
                 <div class="overflow-auto h-full chat-sidebar-scroll custom-scroll carousel-scroll-hide"> 
                   <div class="p-4">
                     <div class="flex items-center justify-between">
@@ -1635,8 +1635,8 @@
                       </ul>
                     </div>
                     <div class="social-detail flex flex-wrap justify-center items-center">
-                      <div class="following-data flex flex-col justify-center items-center gap-1 font-semibold pr-padding border-r-2 border-border-light border-r-2 dark:border-r-2 dark:border-border-dark rtl:border-r-0 rtl:border-l-2"><span class="text-xs leading-5">Following</span><span class="text-[13px] leading-[18px] text-content">235k</span></div>
-                      <div class="follower-data flex flex-col justify-center items-center gap-1 font-semibold pl-padding"> <span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562k</span></div>
+                      <div class="following-data flex flex-col justify-center items-center gap-1 font-semibold pr-padding border-r-2 border-border-light border-r-2 dark:border-r-2 dark:border-border-dark rtl:!border-r-0 rtl:border-l-2"><span class="text-xs leading-5">Following</span><span class="text-[13px] leading-[18px] text-content">235k</span></div>
+                      <div class="follower-data flex flex-col justify-center items-center gap-1 font-semibold pl-padding"> <span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562k </span></div>
                     </div>
                   </div>
                   <div class="p-4 pb-0 tab-links flex justify-between">
@@ -1647,14 +1647,14 @@
                       <p>Document</p>
                     </button>
                     <button class="tab tab-lifted w-full pb-3 border-b border-dashed border-gray-light font-semibold text-sm tab-link leading-[22px] dark:border-b dark:border-border-dark" data-tabFilter="3">
-                      <p>Link</p>
+                      <p>Link  </p>
                     </button>
                   </div>
-                  <div class="tabs-content">
+                  <div class="tabs-content"> 
                     <div class="tab-pan !p-0 !border-0 active show first:rounded-tl-none rounded-5" data-tabContent="1">                                    
                       <div class="px-4 pb-4 mt-4 overflow-auto max-h-[268px] md:max-h-screen custom-scroll">
-                        <div class="grid grid-cols-12 gap-4 pswp-gallery" id="my-gallery">
-                          <div class="col-span-12"><a href="../../assets/images/chat-app/1.jpg" data-pswp-width="1000" data-pswp-height="500" target="_blank"><img class="w-full max-h-[120px] rounded-[10px]" src="../../assets/images/chat-app/1.jpg" alt="image-1"></a></div>
+                        <div class="grid grid-cols-12 gap-4 pswp-gallery" id="my-gallery"> 
+                          <div class="col-span-12"> <a href="../../assets/images/chat-app/1.jpg" data-pswp-width="1000" data-pswp-height="500" target="_blank"><img class="w-full max-h-[120px] rounded-[10px]" src="../../assets/images/chat-app/1.jpg" alt="image-1"></a></div>
                           <div class="col-span-6"><a href="../../assets/images/chat-app/2.jpg" data-pswp-width="1000" data-pswp-height="500" target="_blank"><img class="w-full max-h-[120px] rounded-[10px]" src="../../assets/images/chat-app/2.jpg" alt="image-1"></a></div>
                           <div class="col-span-6"><a href="../../assets/images/chat-app/3.jpg" data-pswp-width="1000" data-pswp-height="500" target="_blank"><img class="w-full max-h-[120px] rounded-[10px]" src="../../assets/images/chat-app/3.jpg" alt="image-1"></a></div>
                           <div class="col-span-12"><a href="../../assets/images/chat-app/1.jpg" data-pswp-width="1000" data-pswp-height="500" target="_blank"><img class="w-full max-h-[120px] rounded-[10px]" src="../../assets/images/chat-app/1.jpg" alt="image-1"></a></div>
@@ -1801,8 +1801,8 @@
                         </div>
                       </li>
                       <li class="pt-[16px] first:pt-0 first:mt-0 first:border-none">                                
-                        <div class="flex items-center justify-between">
-                          <div class="flex justify-center items-center gap-2">
+                        <div class="flex items-center justify-between"> 
+                          <div class="flex justify-center items-center gap-2"> 
                             <svg class="w-5 h-5 stroke-secondary"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
                             </svg>
@@ -1812,9 +1812,9 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="p-4 relative"><img class="w-full h-[127px]" src="../../assets/images/chat-app/6.jpg" alt="more information">
+                  <div class="p-4 relative"> <img class="w-full h-[127px]" src="../../assets/images/chat-app/6.jpg" alt="more information">
                     <div class="absolute top-[50%] left-0 p-4 pl-8 -translate-y-1/2">
-                      <h4 class="font-bold text-sm leading-[22px] w-[170px]">Get more information with <span class="font-extrabold">PRO!</span></h4>
+                      <h4 class="font-bold text-sm leading-[22px] w-[170px]">Get more information with <span class="font-extrabold">PRO! </span></h4>
                       <button class="text-[10px] leading-[14px] font-bold text-white py-[6px] px-[14px] bg-primary mt-2">Upgrade to PRO</button>
                     </div>
                   </div>
@@ -1844,41 +1844,41 @@
           <ul class="flex flex-col gap-7 mode-event">
             <li> 
               <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+                <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
               </div>
-              <div class="mt-2">
+              <div class="mt-2"> 
                 <ul class="flex items-center gap-3 flex-wrap"> 
                   <li class="relative">
                     <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+                    <label class="block overflow-hidden border shadow-md mode-theme-light border-light dark:border-border-dark rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                   </li>
                   <li class="relative">
                     <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+                    <label class="block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
                   </li>
                 </ul>
               </div>
             </li>
             <li>
               <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+                <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
               </div>
               <div class="mt-2">
-                <ul class="flex items-center gap-3">
+                <ul class="flex items-center gap-3"> 
                   <li class="relative">
                     <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+                    <label class="block overflow-hidden border shadow-md layout-ltr border-light dark:border-border-dark rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
                   </li>
                   <li class="relative"> 
                     <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+                    <label class="block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
                   </li>
                 </ul>
               </div>
             </li>
             <li>
               <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+                <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
               </div>
               <div class="mt-2">
                 <ul class="flex items-center gap-3">
@@ -1895,7 +1895,7 @@
             </li>
             <li>
               <div class="flex items-center justify-between"> <span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
-                <label class="inline-flex relative items-center cursor-pointer"> 
+                <label class="inline-flex relative items-center cursor-pointer">
                   <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                 </label>
               </div>
@@ -1903,8 +1903,8 @@
           </ul>
         </div>
       </div>
-      <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
-        <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark">Reset  </button>
+      <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
+        <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
         <button class="btn btn-primary text-white flex-1">Buy Now</button>
       </div>
     </div>
