chart issue done

--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -467,10 +467,10 @@
                       </div>
                     </div>
                   </li>
-                  <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components</span>
-                    <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
+                  <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components </span>
+                    <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-[4.625rem] "> 
                       <!-- Componant menu-->
-                      <ul class="flex flex-col gap-4"> 
+                      <ul class="flex flex-col gap-4 "> 
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center justify-between gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
                               <svg class="w-5 h-5 stroke-title"> 
                                 <use href="../../assets/svg/sprite.svg#Folder"> </use>
@@ -548,7 +548,7 @@
                     </div>
                   </li>
                   <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Applications</span>
-                    <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
+                    <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0">
                       <!-- App Menu -->
                       <ul class="flex flex-col gap-3"> 
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
