--- a/html/template/todo.html
+++ b/html/template/todo.html
@@ -465,10 +465,10 @@
                       </div>
                     </div>
                   </li>
-                  <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components</span>
-                    <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
+                  <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components </span>
+                    <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-[4.625rem] "> 
                       <!-- Componant menu-->
-                      <ul class="flex flex-col gap-4"> 
+                      <ul class="flex flex-col gap-4 "> 
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center justify-between gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
                               <svg class="w-5 h-5 stroke-title"> 
                                 <use href="../../assets/svg/sprite.svg#Folder"> </use>
@@ -546,7 +546,7 @@
                     </div>
                   </li>
                   <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Applications</span>
-                    <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
+                    <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0">
                       <!-- App Menu -->
                       <ul class="flex flex-col gap-3"> 
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
@@ -1286,7 +1286,7 @@
             </div>
           </div>
         </div>
-        <!-- Page Body End -->
+        <!-- Page Body End   -->
         <div class="page-footer 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
           <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
           <div class="flex items-center gap-2"> 
@@ -1368,7 +1368,7 @@
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
-      <div class="modal-main">
+      <div class="modal-main">  
         <input class="peer" id="todo-modal" name="todo-modal" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="todo-modal"></label>
         <div class="modal modal-bottom-right checkout-detail dark:bg-sidebar-dark2 invisible w-11/12 max-w-xl sm:!left-0 transition-all duration-1000 translate-y-0 opacity-0 peer-checked:opacity-100 peer-checked:visible peer-checked:-translate-y-9 !right-[2%]">
