--- a/assets/postcss/components/_kanban.css
+++ b/assets/postcss/components/_kanban.css
@@ -1,3 +1,7 @@
+/*=====================
+  3.15  Kanban Css
+ ==========================*/
+
 @layer components {
   .kanab-common {
     @apply overflow-auto custom-scroll;
