--- a/assets/postcss/components/_select-custom.css
+++ b/assets/postcss/components/_select-custom.css
@@ -1,5 +1,5 @@
 /*=====================
-  Select Custom  CSS
+  3.23 Select Custom  Css
 ==========================*/
 @layer components {
   .select-style-1 {
