--- a/assets/postcss/components/_weekly-shedual.css
+++ b/assets/postcss/components/_weekly-shedual.css
@@ -1,3 +1,7 @@
+/*=====================
+  3.28  Weekly Schedule Css
+  ==========================*/
+
 @layer components {
   .weekly-schedule {
     .fc {
