--- a/assets/postcss/pages/_carousel.css
+++ b/assets/postcss/pages/_carousel.css
@@ -1,5 +1,5 @@
 /*=====================
-    Carousel CSS
+    5.2 Carousel Css
  ==========================*/
 @layer components {
     .carousel {
