--- a/assets/postcss/pages/_chat-app.css
+++ b/assets/postcss/pages/_chat-app.css
@@ -1,5 +1,5 @@
 /*=====================
-    Chat App CSS
+    5.1 Chat App Css
   ==========================*/
 @layer components {
   .chat-sidebar {
