--- a/assets/postcss/pages/_ecommerce.css
+++ b/assets/postcss/pages/_ecommerce.css
@@ -1,5 +1,5 @@
 /*=====================
-    Ecommerce CSS
+  5.5  Ecommerce Css
   ==========================*/
 @layer components {
   .product-modal {
