--- a/assets/postcss/pages/_swiper-slider.css
+++ b/assets/postcss/pages/_swiper-slider.css
@@ -1,5 +1,5 @@
 /*=====================
-    Swiper Slider CSS
+  5.8  Swiper Slider Css
  ==========================*/
 @layer components {
     .swiper {
