--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -162,5 +162,9 @@ if(darkLayout)
     // darkLayout js
     script(src="../../assets/js/dark-layout.js") 
 
+if(gridListView)
+    // gridListView js
+    script(src="../../assets/js/grid-list-view.js") 
+
 // Custom script   
 script(src='../../assets/js/script.js')   
