--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -13,6 +13,9 @@
 //- customizer
 -var customizer=true;
 
+//- gridListView
+-var gridListView=true;
+
 //- Breadcrumbs
 -var pageTitle="Blog Detail";
 -var breadcrumb=['Blog','Blog Detail'];
