--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -19,6 +19,9 @@
 //- customizer 
 -var customizer = true;
 
+//- gridListView
+-var gridListView=true;
+
 //- Breadcrumbs
 -var pageTitle="Shop";
 -var breadcrumb=['Ecommerce','Shop'];
@@ -341,7 +344,7 @@ html(lang='en')
                   label.text-title.text-sm.font-medium(for="size" class="dark:text-white") Sizes
                   ul.flex.items-center.gap-2
                     li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white") S 
-                    li.btn-active.text-title.leading-none.w-8.h-8.flex.items-center.justify-center.border.border-border-light.bg-gray-extralight.rounded-full(class="hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark  dark:bg-sidebar-dark2 dark:text-white") M
+                    li.btn-active.text-title.leading-none.w-8.h-8.flex.items-center.justify-center.border.border-border-light.bg-gray-extralight.rounded-full(class="hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white") M
                     li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white") L 
                     li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white") XL 
                 div.divider.w-full.my-4(class=" dark:border-border-dark 2lg:my-3")
