--- a/html/template/blog-detail.html
+++ b/html/template/blog-detail.html
@@ -1312,6 +1312,8 @@
   <script src="../../assets/js/email-app/email-app-page.js"></script>
   <!-- customizer js-->
   <script src="../../assets/js/customizer.js"> </script>
+  <!-- gridListView js-->
+  <script src="../../assets/js/grid-list-view.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
