--- a/html/template/shop.html
+++ b/html/template/shop.html
@@ -2072,7 +2072,7 @@
                   <label class="text-title text-sm font-medium dark:text-white" for="size">Sizes</label>
                   <ul class="flex items-center gap-2">
                     <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white">S </li>
-                    <li class="btn-active text-title leading-none w-8 h-8 flex items-center justify-center border border-border-light bg-gray-extralight rounded-full hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark  dark:bg-sidebar-dark2 dark:text-white">M</li>
+                    <li class="btn-active text-title leading-none w-8 h-8 flex items-center justify-center border border-border-light bg-gray-extralight rounded-full hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white">M</li>
                     <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white">L </li>
                     <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:hover:bg-sidebar-dark2 dark:border-border-dark dark:hover:text-white">XL </li>
                   </ul>
@@ -2102,6 +2102,8 @@
   <script src="../../assets/js/fontawesome/all.min.js"></script>
   <!-- customizer js-->
   <script src="../../assets/js/customizer.js"> </script>
+  <!-- gridListView js-->
+  <script src="../../assets/js/grid-list-view.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
