--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -1587,7 +1587,7 @@
                               &lt;/div&gt;
                           &lt;/div&gt;
                           &lt;div class="flex flex-col gap-1"&gt;
-                              &lt;h3 class="text-xs font-bold leading-none dark:text-white  lg:text-2xs"&gt;Robot Caslin&lt;/h3&gt;
+                              &lt;h3 class="text-xs font-bold leading-none dark:text-white lg:text-2xs"&gt;Robot Caslin&lt;/h3&gt;
                               &lt;span class="text-content text-3xs"&gt;stroman.rogers@gmail.com&lt;/span&gt;
                           &lt;/div&gt;
                       &lt;/div&gt;
@@ -1732,21 +1732,21 @@
                                 <table class="table equal-space">
                                   <thead>
                                     <tr>
-                                      <th class="dark:text-content3" scope="col">#</th>
-                                      <th class="dark:text-content3" scope="col">Name</th>
-                                      <th class="dark:text-content3" scope="col">Country</th>
-                                      <th class="dark:text-content3" scope="col">Contact No</th>
+                                      <th class="dark:text-content3">#</th>
+                                      <th class="dark:text-content3">Name</th>
+                                      <th class="dark:text-content3">Country</th>
+                                      <th class="dark:text-content3">Contact No</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr> 
-                                      <th class="dark:text-white rtl:text-right" scope="row">1</th>
+                                      <th class="dark:text-white rtl:text-right">1</th>
                                       <td class="dark:text-white">Mrunali</td>
                                       <td class="dark:text-white">India </td>
                                       <td class="dark:text-white">5698741236 </td>
                                     </tr>
                                     <tr>
-                                      <th class="dark:text-white rtl:text-right rtl:pt-4" scope="row">2</th>
+                                      <th class="dark:text-white rtl:text-right rtl:pt-4">2</th>
                                       <td class="dark:text-white">Bright</td>
                                       <td class="dark:text-white">Thailand  </td>
                                       <td class="dark:text-white">7800030320  </td>
@@ -1761,9 +1761,9 @@
                                 <table class="table equal-space"> 
                                   <thead>
                                     <tr>
-                                      <th class="dark:text-content3" scope="col">Technology </th>
-                                      <th class="dark:text-content3" scope="col">Interest </th>
-                                      <th class="dark:text-content3" scope="col">Salary Expected </th>
+                                      <th class="dark:text-content3">Technology </th>
+                                      <th class="dark:text-content3">Interest </th>
+                                      <th class="dark:text-content3">Salary Expected </th>
                                     </tr>
                                   </thead>
                                   <tbody>
@@ -1787,10 +1787,10 @@
                                 <table class="table equal-space"> 
                                   <thead>
                                     <tr>
-                                      <th class="dark:text-content3" scope="col">#</th>
-                                      <th class="dark:text-content3" scope="col">Name</th>
-                                      <th class="dark:text-content3" scope="col">Country</th>
-                                      <th class="dark:text-content3" scope="col">Rating </th>
+                                      <th class="dark:text-content3">#</th>
+                                      <th class="dark:text-content3">Name</th>
+                                      <th class="dark:text-content3">Country</th>
+                                      <th class="dark:text-content3">Rating </th>
                                     </tr>
                                   </thead>
                                   <tbody>
