--- a/assets/postcss/components/_layout.css
+++ b/assets/postcss/components/_layout.css
@@ -1,14 +1,11 @@
 /*=====================
-    Layout CSS
+  3.16  Layout Css
   ==========================*/
 
 @layer components {
   main{
     .page-body{
-      /* @apply lg:mt-[calc(135px_+_(66_-_135)_*_((100vw_-_320px)_/_(1920_-_320)))] mt-[calc(7.95rem+_(7.65_-_7.95)_*_((100vw_-_75rem)_/_(120_-_75)))] md:mt-[7.10rem]; */
-      @apply  mt-[calc(7.95rem+_(7.65_-_7.95)_*_((100vw_-_320px)_/_(1920_-_320)))] lg:mt-[116px] md:mt-[7.10rem];
-      /* @apply mt-[calc(7.95rem+_(7.15_-_7.95)_*_((100vw_-_320px)_/_(1920_-_320)))]; */
-      /* @apply mt-[calc(7.97rem+_(7.15_-_7.97)_*_((100vw_-_75rem)_/_(120_-_75)))] xl:mt-[calc(7.97rem+_(7.15_-_7.97)_*_((100vw_-_120rem)_/_(120_-_20)))]; */
+      @apply mt-[calc(7.97rem+_(7.65_-_7.97)_*_((100vw_-_320px)_/_(1920_-_320)))] 2xl:mt-[calc(7.7rem+_(7.30_-_7.7)_*_((100vw_-_320px)_/_(1920_-_320)))] xl:mt-[calc(7.65rem+_(7.5_-_7.65)_*_((100vw_-_320px)_/_(1920_-_320)))] lg:mt-[116px] md:mt-[7.10rem];
         .apexcharts{
           &-canvas {
           [dir='rtl'] & {
