--- a/assets/postcss/components/_progress-bar.css
+++ b/assets/postcss/components/_progress-bar.css
@@ -1,5 +1,5 @@
 /*=====================
-    Progress Bar CSS
+  3.20  Progress Bar Css
   ==========================*/
 @layer components {
     .progress-bar {
