starter kit page design
rtl, dark,light

--- a/assets/pug/pages/starter-kit/dark.pug
+++ b/assets/pug/pages/starter-kit/dark.pug
@@ -29,10 +29,10 @@ html(lang='en' class="dark")
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
-                include ../../layout/header/header     
+                include ../../layout/header/header
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
-                    include ../../layout/unique
+                    include ../../layout/starter-kit-sidebar    
                 // Sidebar End 
 
                 // Page Body Start
