--- a/assets/pug/pages/starter-kit/index.pug
+++ b/assets/pug/pages/starter-kit/index.pug
@@ -4,6 +4,9 @@
 //- feather
 -var feather= true;
 
+//- fontAwesome
+-var fontAwesome=true; 
+
 //- custom select
 -var customSelect= true;
 
@@ -33,7 +36,7 @@ html(lang='en')
                 include ../../layout/header/header     
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
-                    include ../../layout/unique
+                    include ../../layout/starter-kit-sidebar
                 // Sidebar End 
 
                 // Page Body Start
