--- a/assets/pug/pages/starter-kit/monochrome-mode.pug
+++ b/assets/pug/pages/starter-kit/monochrome-mode.pug
@@ -26,10 +26,10 @@ html(lang='en')
     body(dir="ltr" class="unique-skin monochrome-mode")
         main.page-wrapper
             div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
-                include ../../layout/header/header     
+                include ../../layout/header/header    
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
-                    include ../../layout/unique
+                    include ../../layout/starter-kit-sidebar
                 // Sidebar End 
 
                 // Page Body Start
