--- a/assets/pug/pages/starter-kit/sample-page.pug
+++ b/assets/pug/pages/starter-kit/sample-page.pug
@@ -29,7 +29,7 @@ html(lang='en')
                 include ../../layout/header/header     
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
-                    include ../../layout/unique
+                    include ../../layout/starter-kit-sidebar
                 // Sidebar End 
 
                 // Page Body Start
